Make sure to Reset() if our default value changes and we haven't had our value change.  Bug 215228, r+sr=peterv, a=chofmann